Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetboolean.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, boolean> yoda
        check
            boolean ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
