Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetbooleanFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
